--- a/src/package.json
+++ b/src/package.json
@@ -17,6 +17,8 @@
     "grunt-contrib-connect": "^3.0.0"
   },
   "dependencies": {
-    "grunt": "^1.3.0"
+    "grunt": "^1.3.0",
+    "jay-extend": "^1.0.1",
+    "minpubsub": "0.0.2"
   }
 }
